[package]
name = "po-renderer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maligog = { path = "../maligog" }
maligog-gltf = { path = "../maligog-gltf" }
egui-maligog = { path = "../egui-maligog/egui-maligog" }
winit = "0.25"
tracing = "0.1"
tracing-subscriber = "0.2"
puffin_egui = "0.3"
log = "0.4"



[dependencies.spirv-builder]
git = "https://github.com/EmbarkStudios/rust-gpu"
rev = "c3eff4d4a5a52607aa3bc8b4ba8409f6659425ee"
features = ["use-installed-tools"]
default-features = false

[profile.dev.package.spirv-builder]
opt-level = 3
