[package]
name = "po-renderer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maligog = { path = "../../maligog" }
maligog-gltf = { path = "../../maligog-gltf" }
egui-maligog = { path = "../../egui-maligog/egui-maligog" }
egui_winit_platform = "0.8.0"
winit = "0.25"
tracing = "0.1"
tracing-subscriber = "0.2"
log = "0.4"
puffin = "0.5"
puffin_egui = "0.3"
glam = { version = "0.16", features = ["bytemuck"] }
nfd2 = "0.3.0"
rpmalloc = "0.2"
bytemuck = "1.6"
rayon = "1.5"
crossbeam = "0.8"
dotenv = "0.15"

[dependencies.spirv-builder]
git = "https://github.com/EmbarkStudios/rust-gpu"
rev = "c3eff4d4a5a52607aa3bc8b4ba8409f6659425ee"
features = ["use-installed-tools", "watch"]
default-features = false

