[package]
name = "po"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
rust-gpu-utils = { path = "../../../rust-gpu-utils" }


[dependencies.spirv-std]
git = "https://github.com/EmbarkStudios/rust-gpu"
rev = "f224b5aa1a5e73d0128d23d4bb75b8c23911f180"
features = ["glam"]
